Random-Color-Generator & Java-Script-2 deleted for this branch

--- a/java-script/index.html
+++ b/java-script/index.html
@@ -10,6 +10,11 @@
 
 <body>
     
+    <div id="box-1">
+        <div id="box-2">
+            <button id="btn">Submit</button>
+        </div>
+    </div>
     
     <script src="countdown.js"></script>
 </body>
