Title changed from 'Count-Down' to 'Counter'

--- a/java-script/index.html
+++ b/java-script/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="disp">
         <div id="overlay">
-            <p class="para-1">Count-Down</p>
+            <p class="para-1">Counter</p>
             <p class="para-2" id="para-2">20 March 2024 10:00 PM</p>
             <div class="inputs">
                 <div>
